sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:4: error: type mismatch;
 found   : Int
 required: java.awt.Color
  var color:Color = getCouleur(0)
                              ^